# rust-crashcourse

./: Cargo.toml  README.md
src/: errors.rs  lifetimes.rs  main.rs  std_traits.rs  traits.rs
src/bar/: mod.rs
